# nimtable

./: .dockerignore  .env.example  .gitignore  .licenserc.yaml  .prettierignore  CLAUDE.md  README.md  acc-openapi-ts.config.ts  config.yaml  copypage.tsx  drizzle.config.ts  eslint.config.mjs  next.config.js  next.config.mjs  openapi-ts.config.ts  package-lock.json  package.json  patch_openapi_yaml.py  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  prettier.config.js  rest-catalog-open-api.yaml  tailwind.config.ts  tsconfig.json  webpack.config.ts
app/: layout.tsx  page.tsx
backend/: .gitignore  Cargo.toml  build.gradle  config.yaml  gradle.properties  settings.gradle
backend/src/: config.rs  main.rs  proxy.rs
backend/src/main/java/io/nimtable/: CatalogConfigServlet.java  CatalogsServlet.java  Config.java  DistributionServlet.java  DuckDBQueryServlet.java  IcebergCompactionClient.java  LoginServlet.java  LogoutServlet.java  ManifestServlet.java  OptimizeServlet.java  Server.java  SparkQueryServlet.java  TypeConverter.java  UserServlet.java
backend/src/main/java/io/nimtable/cache/: DataDistributionCache.java
backend/src/main/java/io/nimtable/db/: FlywayMigrator.java  PersistenceManager.java
backend/src/main/java/io/nimtable/dto/: UserDTO.java
backend/src/main/java/io/nimtable/schedule/: ScheduleManager.java
backend/src/main/java/io/nimtable/spark/: LocalSpark.java
backend/src/main/proto/: iceberg.proto
backend/src/main/resources/: config.yaml  log4j.properties  logback.xml
backend/src/test/java/io/nimtable/: LoginServletTest.java
(+304 files in other folders)
