[package]
name = "iceberg-catalog-webui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = "0.12"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.95"
log = "0.4"
